bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:3: error: not found: value ||
    if (hour<7)||(hour>=20){
               ^ParotTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (hour<7)||(hour>=20){
    ^